--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,99 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.message-box {
+  height: 690px;
+  min-height: 690px;
+  overflow: scroll;
+  border: 1px #ccc solid;
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+img {
+  width: 100%;
+}
+
+.game-container {
+  margin-top: 10%;
+}
+
+.video-container {
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.start-game {
+  text-align: center;
+}
+
+.start-game-button {
+  font-size: 2em !important;
+  font-size: 2em !important;
+  border: 1px #ccc solid !important;
+  border-radius: 5px !important;
+}
+
+.works {
+  padding-top: 5%;
+}
+
+.big-button {
+  text-decoration: none;
+  background-color: #eee;
+  top: 60%;
+  position: relative;
+  border: #aaa 1px solid;
+  border-radius: 5px;
+  padding: 3px;
+  margin-bottom: 5%;
+  color: #444;
+}
+
+.big-button:hover {
+  background-color: #ccc;
+  transition: background-color 0.5s ease-in-out;
+}
+
+.big-button:visited {
+  color: #444;
+}
+
+.etb-image {
+  height: 100px;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+.footer-detail {
+  position: fixed;
+  bottom: 1%;
+  left: 1%;
+  font-size: 2em;
+}
+
+.description {
+  text-align: left;
+  font-size: 0.5em;
+}
+
+
+.main-page {
+  text-align: center;
+  font-size: 2.5em;
+}
+
+.top-description {
+  font-size: 1em;
 }
